--- a/roles/install_grafana/tasks/main.yml
+++ b/roles/install_grafana/tasks/main.yml
@@ -1,22 +1,22 @@
 ---
 # tasks file for install_grafana
-- name: Instalando apt-transport-https
+- name: Install apt-transport-https
   apt:
     name: apt-transport-https
     state: latest
 
 
-- name: Adicionando key
+- name: key
   apt_key:
     url: https://packages.grafana.com/gpg.key
     state: present
 
-- name: Adicionando repositorio
+- name: repository
   apt_repository:
     repo: "deb https://packages.grafana.com/oss/deb stable main"
     state: present
 
-- name: Instalando grafana
+- name: Install grafana
   apt:
     update_cache: yes
     name: grafana
